welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: not found: value vasurbiscuit
	vasurbiscuit()
        ^Methods:4: error: not found: value prendbiscuit
	prendbiscuit()
        ^Methods:6: error: not found: value deposebiscuit
	deposebiscuit()
        ^