welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
	vasurbiscuit()
	prendbiscuit()
	retourne()
	deposebiscuit()
	droite()
}
